--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -950,7 +950,7 @@ We further enhanced the Atomic Charge Calculator II application with support for
 
 These advancements provide researchers with enhanced visualization capabilities and user interfaces for calculating and analyzing partial atomic charges. The significance of these improvements to the field of computational chemistry is substantiated by their contribution to a publication in the Nucleic Acids Research journal.
 
-All source code developed in this work is available in the attachments and on GitHub. Links to the GitHub repositories can be found in Appendix \ref{appendix:source-code}. The extension to the Mol* viewer is also available in the official Mol* repository. 
+All source code developed in this work is available on GitHub. Links to the GitHub repositories can be found in Appendix \ref{appendix:source-code}. The extension to the Mol* viewer is also available in the official Mol* repository.
 
 \printbibliography[heading=bibintoc]
 
@@ -963,7 +963,7 @@ All source code developed in this work is available in the attachments and on Gi
 \begin{appendices}
   \chapter{Source code}
   \label{appendix:source-code}
-  All source code can be found in the attachments and on GitHub. Below are the links to the GitHub repositories:
+  Below are the links to the GitHub repositories:
   \begin{itemize}
     \item αCharges: \\
     \url{https://github.com/sb-ncbr/AlphaCharges}
